--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,11 +13,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidERestaurant"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".test"
+            android:name=".CategoryActivity"
             android:exported="false"
-            android:label="@string/title_activity_test"
+            android:label="@string/title_activity_category"
+            android:theme="@style/Theme.AndroidERestaurant" />
+        <activity
+            android:name=".DetailActivity"
+            android:exported="false"
+            android:label="@string/title_activity_detail"
+            android:theme="@style/Theme.AndroidERestaurant" />
+        <activity
+            android:name=".MenuActivity"
+            android:exported="false"
+            android:label="@string/title_activity_menu"
             android:theme="@style/Theme.AndroidERestaurant" />
         <activity
             android:name=".MainActivity"
